# pvr.ksys

./: .gitignore  CMakeLists.txt  LICENSE  README.md
debian/: changelog.in  control  copyright  kodi-pvr-iptvsimple.install  rules
depends/common/curl/: curl.txt
pvr.ksys/: addon.xml.in  changelog.txt
pvr.ksys/resources/: settings.xml
pvr.ksys/resources/language/resource.language.en_gb/: strings.po
pvr.ksys/resources/language/resource.language.fr_fr/: strings.po
src/: PVRIptvData.cpp  PVRIptvData.h  PVRKauth.cpp  PVRKauth.h  PVRKsysAPI.cpp  PVRKsysAPI.h  PVRRecorder.cpp  PVRRecorder.h  PVRRecorderJob.cpp  PVRRecorderJob.h  client.cpp  client.h  json.hpp  stdksys.cpp
src/dialogs/: GUIDialogPinCode.cpp  GUIDialogPinCode.h  GUIDialogPlayerID.cpp  GUIDialogPlayerID.h
